# astrata

./: .gitignore  README.md  bootstrap-plan.md  build-path.md  changelog-2026-04-07.md  fix_app.js  handoff-2026-04-09-inference-lanes.md  heritage-salvage-brief-2026-04-09.md  lightning-salvage.md  mvp-loop.md  package-lock.json  package.json  phase-0-implementation-plan.md  pyproject.toml  runtime-architecture.md  salvage-map.md  spec.md
astrata/: __init__.py  installer.py  main.py  supervisor.py
desktop-shell/: error.html  index.html
docs/: ACCOUNT_AUTH_IMPLEMENTATION_PLAN.md  CHATGPT_CONNECTOR_WALKTHROUGH.md  HOSTED_MCP_RELAY.md  MANUAL.md  PROGRESSIVE_DISCLOSURE_DOCTRINE.md  ROAD_TO_V0.md  WEB_AUTH_CONTROL_PLANE.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
tests/: test_account_control_plane.py  test_account_oauth_http.py  test_accounts.py  test_audit_diagnostics.py  test_audit_reviewing.py  test_browser.py  test_codex_usage_reduction.py  test_comms.py  test_context_helpers.py  test_cyclone.py  test_distribution_release.py  test_durable_agents.py  test_external_agent_controller.py  test_federated_control.py  test_git_worktree.py  test_google_provider.py  test_governance.py  test_governance_policy.py  test_inference_planner.py  test_inference_strategy.py  test_kilocode_registry.py  test_lane_runtime.py  test_local_catalog.py  test_local_runtime.py  test_loop0.py  test_mcp_projections.py  test_mcp_relay.py  test_mcp_relay_queue.py  test_mcp_service.py  test_mcp_transport.py  test_memory.py  test_onboarding.py  (+24 more)
(+205 files in other folders)
