[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "astrata"
version = "0.1.0"
description = "Astrata: recursively self-improving agentic harness"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "fastapi>=0.115.0",
    "playwright>=1.40.0",
    "pydantic>=2.7.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5.0",
]

[project.scripts]
astrata = "astrata.main:main"
astrata-ui = "astrata.ui.server:main"
astrata-install = "astrata.installer:main"
astrata-mcp = "astrata.mcp.server:main"
astrata-web = "astrata.webpresence.server:main"
astrata-release = "astrata.distribution.release:main"

[tool.ruff]
line-length = 100
target-version = "py311"
