[package]
name = "astrata-desktop"
version = "0.1.0"
description = "Thin native Tauri shell for Astrata"
authors = ["Astrata"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"

[profile.dev]
incremental = true

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
